--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>JavaScript intro</title>
 </head>
 <body>
@@ -11,6 +12,6 @@
 		<p>Lorem ipsum</p>
 	</div>
 
-	<script src="./js/veiksmai.js"></script>
+	<script src="./js/multiply.js"></script>
 </body>
 </html>
