--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 		<p>Lorem ipsum</p>
 	</div>
 
-	<script src="./js/multiply.js"></script>
+	<script src="./js/array-func.js"></script>
 </body>
 </html>
