--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>JavaScript intro</title>
 </head>
+
 <body>
 	<div>
 		<h1>JS rocks!</h1>
 		<p>Lorem ipsum</p>
 	</div>
 
-	<script src="./js/array-func.js"></script>
+	<script src="./js/foreach.js"></script>
 </body>
+
 </html>
